# shopping-guru

./: .env-example  .gitignore  README.md  main.py  pyproject.toml
