[project]
name = "shopping-guru"
version = "0.1.0"
description = "An autonomous shopping agent for product discovery, comparisons, price alerts and purchases"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.1.40",
    "google-genai>=1.5.0",
    "langchain-google-genai>=2.0.11",
    "langchain-ollama",
    "playwright>=1.50.0",
    "streamlit>=1.43.1",
]
